ACLOCAL_AMFLAGS = -I m4

SUBDIRS = utils src test examples

dist_doc_DATA = \
	README			\
	doc/aal_python.txt      \
	doc/adapters.txt	\
	doc/architecture.txt	\
	doc/configuration.txt   \
	doc/models.txt		\
	doc/overview.txt	\
	doc/tutorial.txt

src/android/fmbt_droid:
	$(MAKE) -C src android/fmbt_droid
