examplescppdir = @docdir@/examples/c++-unittest

examplesjsdir = @docdir@/examples/javascript-unittest

examplesshelldir = @docdir@/examples/shell-configurationtest

examplesjavadir = @docdir@/examples/java-configurationtest

examplescoursecamerapygtdir = @docdir@/examples/fmbtcourse-camera-pygt

dist_examplescpp_DATA = \
	c++-unittest/Makefile			\
	c++-unittest/mycounter.cc		\
	c++-unittest/mycounter.h		\
	c++-unittest/mycountertest.cc.aal	\
	c++-unittest/README			\
	c++-unittest/test.conf

dist_examplesjs_DATA = \
	javascript-unittest/mycounter.js		\
	javascript-unittest/README			\
	javascript-unittest/regressiontest.conf		\
	javascript-unittest/reliabilitytest.conf	\
	javascript-unittest/smoketest.conf		\
	javascript-unittest/test.html			\
	javascript-unittest/testmodel.gt		\
	javascript-unittest/teststeps.py

dist_examplesshell_DATA = \
	shell-configurationtest/README          \
	shell-configurationtest/test-configurations.sh

dist_examplesjava_DATA = \
	java-unittest/Makefile				\
	java-unittest/MyCounter.java			\
	java-unittest/mycountertesttrue.java.aal	\
	java-unittest/mycountertestfalse.java.aal	\
	java-unittest/README				\
	java-unittest/testtrue.conf			\
	java-unittest/testfalse.conf

dist_examplescoursecamerapygt_DATA = \
	fmbtcourse-camera-pygt/capture-py.gt	\
	fmbtcourse-camera-pygt/camera.py	\
	fmbtcourse-camera-pygt/capture-py.conf	\
	fmbtcourse-camera-pygt/README		\
	fmbtcourse-camera-pygt/teststeps.py
