examplesaalcomponentsdir = @docdir@/examples/aal-components

examplescppdir = @docdir@/examples/c++-unittest

examplesfilesystemtestdir = @docdir@/examples/filesystemtest

examplesgtcomponentsdir = @docdir@/examples/gt-components

examplesjsdir = @docdir@/examples/javascript-unittest

examplesshelldir = @docdir@/examples/shell-configurationtest

examplesjavadir = @docdir@/examples/java-configurationtest

examplescoursecamerapygtdir = @docdir@/examples/fmbtcourse-camera-pygt

examplesofflinetestsuitedir = @docdir@/examples/offline-test-suite

dist_examplesaalcomponents_DATA =	\
	aal-components/basesystem.aal	\
	aal-components/aal_lib/calc.actions	\
	aal-components/aal_lib/clock.actions	\
	aal-components/fullsystem.conf	\
	aal-components/README

dist_examplescpp_DATA = \
	c++-unittest/Makefile			\
	c++-unittest/mycounter.cc		\
	c++-unittest/mycounter.h		\
	c++-unittest/mycountertest.cc.aal	\
	c++-unittest/README			\
	c++-unittest/test.conf

dist_examplesfilesystemtest_DATA = \
	filesystemtest/filesystemtest.aal	\
	filesystemtest/filesystemtest.conf	\
	filesystemtest/README

dist_examplesgtcomponents_DATA =	\
	gt-components/endmeeting.gt.inc \
	gt-components/meeting.conf	\
	gt-components/meeting.gt	\
	gt-components/present.gt.inc	\
	gt-components/question.gt	\
	gt-components/README

dist_examplesjs_DATA = \
	javascript-unittest/mycounter.js		\
	javascript-unittest/mycountertest.aal		\
	javascript-unittest/README			\
	javascript-unittest/regressiontest.conf		\
	javascript-unittest/reliabilitytest.conf	\
	javascript-unittest/smoketest.conf		\
	javascript-unittest/test.html

dist_examplesshell_DATA = \
	shell-configurationtest/README          \
	shell-configurationtest/test-configurations.sh

dist_examplesjava_DATA = \
	java-unittest/Makefile				\
	java-unittest/MyCounter.java			\
	java-unittest/mycountertesttrue.java.aal	\
	java-unittest/mycountertestfalse.java.aal	\
	java-unittest/README				\
	java-unittest/testtrue.conf			\
	java-unittest/testfalse.conf

dist_examplescoursecamerapygt_DATA = \
	fmbtcourse-camera-pygt/capture-py.gt	\
	fmbtcourse-camera-pygt/camera.py	\
	fmbtcourse-camera-pygt/capture-py.conf	\
	fmbtcourse-camera-pygt/README		\
	fmbtcourse-camera-pygt/teststeps.py

dist_examplesofflinetestsuite_DATA = \
	offline-test-suite/generate-all-tests		\
	offline-test-suite/weakly-connected.gt		\
	offline-test-suite/weakly-connected.conf	\
	offline-test-suite/README
