TESTS = interactivemode/run.sh tutorial/run.sh adapters/run.sh examples/run.sh aalpython/run.sh fmbt-stats/run.sh coverage/run.sh exitvalue/run.sh history/run.sh eyenfinger/run.sh remoteerror/run.sh weight/run.sh

dist_noinst_SCRIPTS = aalpython/run.sh aalpython/test1.py.aal

dist_noinst_SCRIPTS += adapters/run.sh

dist_noinst_SCRIPTS += coverage/run.sh coverage/t1.gt coverage/t2.gt

dist_noinst_SCRIPTS += examples/run.sh

dist_noinst_SCRIPTS += exitvalue/run.sh

dist_noinst_SCRIPTS += history/run.sh history/one-step-tests.sh history/one-step-tests.conf history/abc.gt

dist_noinst_SCRIPTS += tutorial/run.sh

dist_noinst_SCRIPTS += interactivemode/create-model.sh interactivemode/dummys.mrules interactivemode/fmbt-i.mrules interactivemode/fmbt_i.py interactivemode/run.sh interactivemode/singledummy.mrules interactivemode/test.conf

dist_noinst_SCRIPTS += fmbt-stats/run.sh fmbt-stats/teststeps.py fmbt-stats/model.gt

dist_noinst_SCRIPTS += functions.sh

dist_noinst_SCRIPTS += eyenfinger/run.sh eyenfinger/screenshot2.png eyenfinger/screenshot2-icon.png eyenfinger/test.aal.conf eyenfinger/test.py.aal

dist_noinst_SCRIPTS += remoteerror/crashraise.aal remoteerror/crashingsteps.py remoteerror/run.sh

dist_noinst_SCRIPTS += weight/model.gt weight/run.sh weight/test-allzeros.weight weight/test-onlyone.weight weight/test-fiftyfifty.weight
