TESTS = interactivemode/run.sh tutorial/run.sh adapters/run.sh examples/run.sh aalpython/run.sh fmbt-stats/run.sh coverage/run.sh coverage_shared/run.sh exitvalue/run.sh history/run.sh eyenfinger/run.sh remoteerror/run.sh reporting/run.sh weight/run.sh heuristic_mrandom/run.sh learn/run.sh

dist_noinst_SCRIPTS = aalpython/run.sh aalpython/adapter_exceptions.aal aalpython/adapter_exceptions.conf aalpython/changing_model_in_adapter.aal aalpython/changing_model_in_adapter.conf aalpython/changing_model_in_adapter.expected aalpython/controlflow.aal aalpython/controlflow.conf aalpython/mycounter.py aalpython/nested.aal aalpython/nested.conf aalpython/outputs.aal aalpython/serpa.aal aalpython/serpa.conf aalpython/tags.aal aalpython/tags-allfail.conf aalpython/tags.conf aalpython/tags-fail.conf aalpython/test1.py.aal

dist_noinst_SCRIPTS += heuristic_mrandom/run.sh heuristic_mrandom/t1.conf heuristic_mrandom/t1.gt

dist_noinst_SCRIPTS += adapters/run.sh adapters/timer/run.sh adapters/timer/timer.conf adapters/timer/timer.gt adapters/timer/timer.mrules

dist_noinst_SCRIPTS += coverage/run.sh coverage/abc.gt coverage/abc_reg.gt coverage/coffee.gt coverage/usecase-tags.aal coverage/t1.gt coverage/t2.gt coverage/t3.gt coverage/twocounters.aal

dist_noinst_SCRIPTS += coverage_shared/run.sh coverage_shared/shared.conf coverage_shared/two.aal coverage_shared/two.conf

dist_noinst_SCRIPTS += examples/run.sh

dist_noinst_SCRIPTS += exitvalue/run.sh exitvalue/broken-adapter.aal exitvalue/broken-body.aal exitvalue/broken-guard.aal exitvalue/broken-initial_state.aal exitvalue/broken-language.aal exitvalue/broken-requiredvalue.gt exitvalue/run_new.sh

dist_noinst_SCRIPTS += history/run.sh history/history_test.conf history/history_test.aal history/one-step-tests.sh history/one-step-tests.conf history/one-step-tests_old.sh history/abc.gt

dist_noinst_SCRIPTS += tutorial/run.sh

dist_noinst_SCRIPTS += interactivemode/breakpoints.aal interactivemode/breakpoints.conf interactivemode/create-model.sh interactivemode/dummys.mrules interactivemode/fmbt-i.mrules interactivemode/fmbt_i.py interactivemode/run.sh interactivemode/singledummy.mrules interactivemode/simple.conf interactivemode/simple.gt interactivemode/test.conf

dist_noinst_SCRIPTS += fmbt-stats/run.sh fmbt-stats/teststeps.py fmbt-stats/model.gt

dist_noinst_SCRIPTS += functions.sh fmbttestutils.py

dist_noinst_SCRIPTS += eyenfinger/run.sh eyenfinger/screenshot2.png eyenfinger/screenshot2-icon.png eyenfinger/test.aal.conf eyenfinger/test.py.aal

dist_noinst_SCRIPTS += remoteerror/crashraise.aal remoteerror/crashingsteps.py remoteerror/run.sh

dist_noinst_SCRIPTS += reporting/mplayertest.aal reporting/run.sh

dist_noinst_SCRIPTS += weight/model.gt weight/run.sh weight/test-allzeros.weight weight/test-onlyone.weight weight/test-fiftyfifty.weight

dist_noinst_SCRIPTS += learn/run.sh learn/times.aal
